--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "antd",
-  "version": "0.10.4",
-  "stableVersion": "0.10.4",
+  "version": "0.10.4-4",
+  "stableVersion": "0.10.4-4",
   "title": "Ant Design",
   "description": "一个 UI 设计语言",
   "homepage": "http://ant.design/",
@@ -21,10 +21,10 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/ant-design/ant-design"
+    "url": "https://github.com/growingio/ant-design"
   },
   "bugs": {
-    "url": "https://github.com/ant-design/ant-design/issues"
+    "url": "https://github.com/growingio/ant-design/issues"
   },
   "main": "lib/index",
   "files": [
@@ -62,7 +62,7 @@
     "rc-tooltip": "~3.2.0",
     "rc-tree": "~0.19.0",
     "rc-trigger": "~1.0.6",
-    "rc-upload": "~1.7.0",
+    "rc-upload": "~1.13.0",
     "rc-util": "~3.0.1",
     "react-slick": "~0.9.1",
     "reqwest": "~2.0.5",
